--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 						</div>
 					</a>
 
-					<a href="#" class="flex-item projects-1">
+					<a href="https://ajsherrill2.github.io/Project-1-Runtime-Terror/" class="flex-item projects-1">
 						<div>
-							<h3>project-1</h3>
+							<h3>project-1-Runtime-Terror- An interactive Book Market App</h3>
 						</div>
 					</a>
 
